y.output
Terminals unused in grammar

   '='
   '%'


Grammar

    0 $accept: progr $end

    1 progr: declarations body test

    2 declarations: declaration ';'
    3             | declarations declaration ';'

    4 declaration: function_decl
    5            | variable_decl
    6            | const_decl
    7            | array_decl
    8            | struct_decl

    9 variable_decl: TIPi IDint
   10              | TIPb IDbool
   11              | TIPs IDstring
   12              | TIPf IDfloat

   13 array_decl: TIPi IDint '[' INT ']'
   14           | TIPs IDstring '[' INT ']'
   15           | TIPf IDfloat '[' INT ']'
   16           | TIPb IDbool '[' INT ']'

   17 struct_decl: TIPstruct IDstruct '{' struct_var_decl '}'

   18 struct_var_decl: variable_decl ';'
   19                | struct_var_decl variable_decl ';'

   20 data_id_type: IDint
   21             | IDbool
   22             | IDfloat
   23             | IDstring
   24             | econst

   25 const_decl: TIPi CIDint ASSIGN numberint
   26           | TIPs CIDstring ASSIGN estring
   27           | TIPb CIDbool ASSIGN ebool
   28           | TIPf CIDfloat ASSIGN numberfl

   29 param_list_decl: %empty
   30                | params_decl

   31 params_decl: param_decl
   32            | params_decl ',' param_decl

   33 param_decl: TIPi IDint
   34           | TIPi CIDint
   35           | TIPs IDstring
   36           | TIPs CIDstring
   37           | TIPb IDbool
   38           | TIPb CIDbool
   39           | TIPf IDfloat
   40           | TIPf CIDfloat

   41 function_decl: TIPi IDint '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION
   42              | TIPs IDstring '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION
   43              | TIPf IDfloat '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION
   44              | TIPb IDbool '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

   45 param_list: %empty
   46           | params

   47 params: param
   48       | params ',' param

   49 param: gnumber
   50      | ebool
   51      | estring
   52      | function_call

   53 body: BGIN list END

   54 list: statement
   55     | list statement

   56 statement: assgnst ';'
   57          | assgnint ';'
   58          | assgnfl ';'
   59          | assgnbl ';'
   60          | control
   61          | print ';'
   62          | function_call ';'

   63 test: %empty

   64 function_call: data_id_type '(' param_list ')'

   65 control: IF '(' exprlog ')' '?' list else ENDIF
   66        | FOR '(' exprfor ')' list ENDFOR
   67        | WHILE '(' exprlog ')' list ENDWHILE

   68 else: %empty
   69     | ELSE list

   70 exprlog: exprlognr
   71        | exprlogst
   72        | ebool
   73        | '(' exprlog ')'
   74        | NOT exprlog
   75        | exprlog AND exprlog
   76        | exprlog OR exprlog

   77 exprlognr: exprfl LE exprfl
   78          | exprfl GE exprfl
   79          | exprfl '<' exprfl
   80          | exprfl '>' exprfl
   81          | exprfl EQUAL exprfl
   82          | exprfl DIFF exprfl

   83 exprlogst: exprst EQUAL exprst
   84          | exprst DIFF exprst

   85 exprfor: assgnint ';' exprlognr ';' assgnint

   86 assgnst: IDstring ASSIGN exprst

   87 assgnint: IDint ASSIGN exprint

   88 assgnbl: IDbool ASSIGN exprlog

   89 assgnfl: IDfloat ASSIGN exprfl

   90 numberint: IDint
   91          | INT
   92          | CIDint
   93          | IDint '[' numberint ']'

   94 numberfl: IDfloat
   95         | FLOAT
   96         | CIDfloat
   97         | IDfloat '[' numberint ']'

   98 gnumber: numberfl
   99        | numberint

  100 ebool: IDbool
  101      | BOOL
  102      | CIDbool
  103      | IDbool '[' numberint ']'

  104 estring: IDstring
  105        | STRING
  106        | CIDstring
  107        | IDstring '[' numberint ']'

  108 econst: CIDint
  109       | CIDbool
  110       | CIDfloat
  111       | CIDstring

  112 exprint: numberint
  113        | IDint '(' param_list ')'
  114        | exprint '+' exprint
  115        | exprint '-' exprint
  116        | exprint '*' exprint
  117        | exprint '/' exprint
  118        | exprint '^' exprint
  119        | '(' exprint ')'
  120        | UMINUS exprint

  121 exprfl: gnumber
  122       | IDfloat '(' param_list ')'
  123       | IDint '(' param_list ')'
  124       | exprfl '+' exprfl
  125       | exprfl '-' exprfl
  126       | exprfl '*' exprfl
  127       | exprfl '/' exprfl
  128       | exprfl '^' exprfl
  129       | '(' exprfl ')'
  130       | UMINUS exprfl

  131 exprst: estring
  132       | exprst '+' exprst
  133       | '(' exprst ')'
  134       | exprst '*' numberint

  135 print: PRINT '(' IDint ')'
  136      | PRINT '(' IDfloat ')'
  137      | PRINT '(' IDbool ')'
  138      | PRINT '(' IDstring ')'
  139      | PRINT '(' CIDint ')'
  140      | PRINT '(' CIDfloat ')'
  141      | PRINT '(' CIDbool ')'
  142      | PRINT '(' CIDstring ')'
  143      | PRINT '(' ENDL ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'(' (40) 41 42 43 44 64 65 66 67 73 113 119 122 123 129 133 135 136
    137 138 139 140 141 142 143
')' (41) 41 42 43 44 64 65 66 67 73 113 119 122 123 129 133 135 136
    137 138 139 140 141 142 143
'*' (42) 116 126 134
'+' (43) 114 124 132
',' (44) 32 48
'-' (45) 115 125
'/' (47) 117 127
';' (59) 2 3 18 19 56 57 58 59 61 62 85
'<' (60) 79
'=' (61)
'>' (62) 80
'?' (63) 65
'[' (91) 13 14 15 16 93 97 103 107
']' (93) 13 14 15 16 93 97 103 107
'^' (94) 118 128
'{' (123) 17
'}' (125) 17
error (256)
TIPi (258) 9 13 25 33 34 41
TIPf (259) 12 15 28 39 40 43
TIPs (260) 11 14 26 35 36 42
TIPb (261) 10 16 27 37 38 44
TIPstruct (262) 17
IDint (263) 9 13 20 33 41 87 90 93 113 123 135
IDfloat (264) 12 15 22 39 43 89 94 97 122 136
IDstring (265) 11 14 23 35 42 86 104 107 138
IDbool (266) 10 16 21 37 44 88 100 103 137
IDstruct (267) 17
CIDint (268) 25 34 92 108 139
CIDfloat (269) 28 40 96 110 140
CIDstring (270) 26 36 106 111 142
CIDbool (271) 27 38 102 109 141
BGIN (272) 53
END (273) 53
ASSIGN (274) 25 26 27 28 86 87 88 89
PRINT (275) 135 136 137 138 139 140 141 142 143
IF (276) 65
ELSE (277) 69
ENDIF (278) 65
FOR (279) 66
ENDFOR (280) 66
WHILE (281) 67
ENDWHILE (282) 67
LE (283) 77
GE (284) 78
EQUAL (285) 81 83
DIFF (286) 82 84
NOT (287) 74
AND (288) 75
OR (289) 76
UMINUS (290) 120 130
BEGIN_FUNCTION (291) 41 42 43 44
END_FUNCTION (292) 41 42 43 44
ENDL (293) 143
STRING (294) 105
INT (295) 13 14 15 16 91
FLOAT (296) 95
BOOL (297) 101


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
progr (62)
    on left: 1, on right: 0
declarations (63)
    on left: 2 3, on right: 1 3
declaration (64)
    on left: 4 5 6 7 8, on right: 2 3
variable_decl (65)
    on left: 9 10 11 12, on right: 5 18 19
array_decl (66)
    on left: 13 14 15 16, on right: 7
struct_decl (67)
    on left: 17, on right: 8
struct_var_decl (68)
    on left: 18 19, on right: 17 19
data_id_type (69)
    on left: 20 21 22 23 24, on right: 64
const_decl (70)
    on left: 25 26 27 28, on right: 6
param_list_decl (71)
    on left: 29 30, on right: 41 42 43 44
params_decl (72)
    on left: 31 32, on right: 30 32
param_decl (73)
    on left: 33 34 35 36 37 38 39 40, on right: 31 32
function_decl (74)
    on left: 41 42 43 44, on right: 4
param_list (75)
    on left: 45 46, on right: 64 113 122 123
params (76)
    on left: 47 48, on right: 46 48
param (77)
    on left: 49 50 51 52, on right: 47 48
body (78)
    on left: 53, on right: 1
list (79)
    on left: 54 55, on right: 41 42 43 44 53 55 65 66 67 69
statement (80)
    on left: 56 57 58 59 60 61 62, on right: 54 55
test (81)
    on left: 63, on right: 1
function_call (82)
    on left: 64, on right: 52 62
control (83)
    on left: 65 66 67, on right: 60
else (84)
    on left: 68 69, on right: 65
exprlog (85)
    on left: 70 71 72 73 74 75 76, on right: 65 67 73 74 75 76 88
exprlognr (86)
    on left: 77 78 79 80 81 82, on right: 70 85
exprlogst (87)
    on left: 83 84, on right: 71
exprfor (88)
    on left: 85, on right: 66
assgnst (89)
    on left: 86, on right: 56
assgnint (90)
    on left: 87, on right: 57 85
assgnbl (91)
    on left: 88, on right: 59
assgnfl (92)
    on left: 89, on right: 58
numberint (93)
    on left: 90 91 92 93, on right: 25 93 97 99 103 107 112 134
numberfl (94)
    on left: 94 95 96 97, on right: 28 98
gnumber (95)
    on left: 98 99, on right: 49 121
ebool (96)
    on left: 100 101 102 103, on right: 27 50 72
estring (97)
    on left: 104 105 106 107, on right: 26 51 131
econst (98)
    on left: 108 109 110 111, on right: 24
exprint (99)
    on left: 112 113 114 115 116 117 118 119 120, on right: 87 114
    115 116 117 118 119 120
exprfl (100)
    on left: 121 122 123 124 125 126 127 128 129 130, on right: 77
    78 79 80 81 82 89 124 125 126 127 128 129 130
exprst (101)
    on left: 131 132 133 134, on right: 83 84 86 132 133 134
print (102)
    on left: 135 136 137 138 139 140 141 142 143, on right: 61


State 0

    0 $accept: . progr $end

    TIPi       shift, and go to state 1
    TIPf       shift, and go to state 2
    TIPs       shift, and go to state 3
    TIPb       shift, and go to state 4
    TIPstruct  shift, and go to state 5

    progr          go to state 6
    declarations   go to state 7
    declaration    go to state 8
    variable_decl  go to state 9
    array_decl     go to state 10
    struct_decl    go to state 11
    const_decl     go to state 12
    function_decl  go to state 13


State 1

    9 variable_decl: TIPi . IDint
   13 array_decl: TIPi . IDint '[' INT ']'
   25 const_decl: TIPi . CIDint ASSIGN numberint
   41 function_decl: TIPi . IDint '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    IDint   shift, and go to state 14
    CIDint  shift, and go to state 15


State 2

   12 variable_decl: TIPf . IDfloat
   15 array_decl: TIPf . IDfloat '[' INT ']'
   28 const_decl: TIPf . CIDfloat ASSIGN numberfl
   43 function_decl: TIPf . IDfloat '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    IDfloat   shift, and go to state 16
    CIDfloat  shift, and go to state 17


State 3

   11 variable_decl: TIPs . IDstring
   14 array_decl: TIPs . IDstring '[' INT ']'
   26 const_decl: TIPs . CIDstring ASSIGN estring
   42 function_decl: TIPs . IDstring '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    IDstring   shift, and go to state 18
    CIDstring  shift, and go to state 19


State 4

   10 variable_decl: TIPb . IDbool
   16 array_decl: TIPb . IDbool '[' INT ']'
   27 const_decl: TIPb . CIDbool ASSIGN ebool
   44 function_decl: TIPb . IDbool '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    IDbool   shift, and go to state 20
    CIDbool  shift, and go to state 21


State 5

   17 struct_decl: TIPstruct . IDstruct '{' struct_var_decl '}'

    IDstruct  shift, and go to state 22


State 6

    0 $accept: progr . $end

    $end  shift, and go to state 23


State 7

    1 progr: declarations . body test
    3 declarations: declarations . declaration ';'

    TIPi       shift, and go to state 1
    TIPf       shift, and go to state 2
    TIPs       shift, and go to state 3
    TIPb       shift, and go to state 4
    TIPstruct  shift, and go to state 5
    BGIN       shift, and go to state 24

    declaration    go to state 25
    variable_decl  go to state 9
    array_decl     go to state 10
    struct_decl    go to state 11
    const_decl     go to state 12
    function_decl  go to state 13
    body           go to state 26


State 8

    2 declarations: declaration . ';'

    ';'  shift, and go to state 27


State 9

    5 declaration: variable_decl .

    $default  reduce using rule 5 (declaration)


State 10

    7 declaration: array_decl .

    $default  reduce using rule 7 (declaration)


State 11

    8 declaration: struct_decl .

    $default  reduce using rule 8 (declaration)


State 12

    6 declaration: const_decl .

    $default  reduce using rule 6 (declaration)


State 13

    4 declaration: function_decl .

    $default  reduce using rule 4 (declaration)


State 14

    9 variable_decl: TIPi IDint .
   13 array_decl: TIPi IDint . '[' INT ']'
   41 function_decl: TIPi IDint . '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    '['  shift, and go to state 28
    '('  shift, and go to state 29

    $default  reduce using rule 9 (variable_decl)


State 15

   25 const_decl: TIPi CIDint . ASSIGN numberint

    ASSIGN  shift, and go to state 30


State 16

   12 variable_decl: TIPf IDfloat .
   15 array_decl: TIPf IDfloat . '[' INT ']'
   43 function_decl: TIPf IDfloat . '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    '['  shift, and go to state 31
    '('  shift, and go to state 32

    $default  reduce using rule 12 (variable_decl)


State 17

   28 const_decl: TIPf CIDfloat . ASSIGN numberfl

    ASSIGN  shift, and go to state 33


State 18

   11 variable_decl: TIPs IDstring .
   14 array_decl: TIPs IDstring . '[' INT ']'
   42 function_decl: TIPs IDstring . '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    '['  shift, and go to state 34
    '('  shift, and go to state 35

    $default  reduce using rule 11 (variable_decl)


State 19

   26 const_decl: TIPs CIDstring . ASSIGN estring

    ASSIGN  shift, and go to state 36


State 20

   10 variable_decl: TIPb IDbool .
   16 array_decl: TIPb IDbool . '[' INT ']'
   44 function_decl: TIPb IDbool . '(' param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    '['  shift, and go to state 37
    '('  shift, and go to state 38

    $default  reduce using rule 10 (variable_decl)


State 21

   27 const_decl: TIPb CIDbool . ASSIGN ebool

    ASSIGN  shift, and go to state 39


State 22

   17 struct_decl: TIPstruct IDstruct . '{' struct_var_decl '}'

    '{'  shift, and go to state 40


State 23

    0 $accept: progr $end .

    $default  accept


State 24

   53 body: BGIN . list END

    IDint      shift, and go to state 41
    IDfloat    shift, and go to state 42
    IDstring   shift, and go to state 43
    IDbool     shift, and go to state 44
    CIDint     shift, and go to state 45
    CIDfloat   shift, and go to state 46
    CIDstring  shift, and go to state 47
    CIDbool    shift, and go to state 48
    PRINT      shift, and go to state 49
    IF         shift, and go to state 50
    FOR        shift, and go to state 51
    WHILE      shift, and go to state 52

    data_id_type   go to state 53
    list           go to state 54
    statement      go to state 55
    function_call  go to state 56
    control        go to state 57
    assgnst        go to state 58
    assgnint       go to state 59
    assgnbl        go to state 60
    assgnfl        go to state 61
    econst         go to state 62
    print          go to state 63


State 25

    3 declarations: declarations declaration . ';'

    ';'  shift, and go to state 64


State 26

    1 progr: declarations body . test

    $default  reduce using rule 63 (test)

    test  go to state 65


State 27

    2 declarations: declaration ';' .

    $default  reduce using rule 2 (declarations)


State 28

   13 array_decl: TIPi IDint '[' . INT ']'

    INT  shift, and go to state 66


State 29

   41 function_decl: TIPi IDint '(' . param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    TIPi  shift, and go to state 67
    TIPf  shift, and go to state 68
    TIPs  shift, and go to state 69
    TIPb  shift, and go to state 70

    $default  reduce using rule 29 (param_list_decl)

    param_list_decl  go to state 71
    params_decl      go to state 72
    param_decl       go to state 73


State 30

   25 const_decl: TIPi CIDint ASSIGN . numberint

    IDint   shift, and go to state 74
    CIDint  shift, and go to state 75
    INT     shift, and go to state 76

    numberint  go to state 77


State 31

   15 array_decl: TIPf IDfloat '[' . INT ']'

    INT  shift, and go to state 78


State 32

   43 function_decl: TIPf IDfloat '(' . param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    TIPi  shift, and go to state 67
    TIPf  shift, and go to state 68
    TIPs  shift, and go to state 69
    TIPb  shift, and go to state 70

    $default  reduce using rule 29 (param_list_decl)

    param_list_decl  go to state 79
    params_decl      go to state 72
    param_decl       go to state 73


State 33

   28 const_decl: TIPf CIDfloat ASSIGN . numberfl

    IDfloat   shift, and go to state 80
    CIDfloat  shift, and go to state 81
    FLOAT     shift, and go to state 82

    numberfl  go to state 83


State 34

   14 array_decl: TIPs IDstring '[' . INT ']'

    INT  shift, and go to state 84


State 35

   42 function_decl: TIPs IDstring '(' . param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    TIPi  shift, and go to state 67
    TIPf  shift, and go to state 68
    TIPs  shift, and go to state 69
    TIPb  shift, and go to state 70

    $default  reduce using rule 29 (param_list_decl)

    param_list_decl  go to state 85
    params_decl      go to state 72
    param_decl       go to state 73


State 36

   26 const_decl: TIPs CIDstring ASSIGN . estring

    IDstring   shift, and go to state 86
    CIDstring  shift, and go to state 87
    STRING     shift, and go to state 88

    estring  go to state 89


State 37

   16 array_decl: TIPb IDbool '[' . INT ']'

    INT  shift, and go to state 90


State 38

   44 function_decl: TIPb IDbool '(' . param_list_decl ')' BEGIN_FUNCTION list END_FUNCTION

    TIPi  shift, and go to state 67
    TIPf  shift, and go to state 68
    TIPs  shift, and go to state 69
    TIPb  shift, and go to state 70

    $default  reduce using rule 29 (param_list_decl)

    param_list_decl  go to state 91
    params_decl      go to state 72
    param_decl       go to state 73


State 39

   27 const_decl: TIPb CIDbool ASSIGN . ebool

    IDbool   shift, and go to state 92
    CIDbool  shift, and go to state 93
    BOOL     shift, and go to state 94

    ebool  go to state 95


State 40

   17 struct_decl: TIPstruct IDstruct '{' . struct_var_decl '}'

    TIPi  shift, and go to state 96
    TIPf  shift, and go to state 97
    TIPs  shift, and go to state 98
    TIPb  shift, and go to state 99

    variable_decl    go to state 100
    struct_var_decl  go to state 101


State 41

   20 data_id_type: IDint .
   87 assgnint: IDint . ASSIGN exprint

    ASSIGN  shift, and go to state 102

    $default  reduce using rule 20 (data_id_type)


State 42

   22 data_id_type: IDfloat .
   89 assgnfl: IDfloat . ASSIGN exprfl

    ASSIGN  shift, and go to state 103

    $default  reduce using rule 22 (data_id_type)


State 43

   23 data_id_type: IDstring .
   86 assgnst: IDstring . ASSIGN exprst

    ASSIGN  shift, and go to state 104

    $default  reduce using rule 23 (data_id_type)


State 44

   21 data_id_type: IDbool .
   88 assgnbl: IDbool . ASSIGN exprlog

    ASSIGN  shift, and go to state 105

    $default  reduce using rule 21 (data_id_type)


State 45

  108 econst: CIDint .

    $default  reduce using rule 108 (econst)


State 46

  110 econst: CIDfloat .

    $default  reduce using rule 110 (econst)


State 47

  111 econst: CIDstring .

    $default  reduce using rule 111 (econst)


State 48

  109 econst: CIDbool .

    $default  reduce using rule 109 (econst)


State 49

  135 print: PRINT . '(' IDint ')'
  136      | PRINT . '(' IDfloat ')'
  137      | PRINT . '(' IDbool ')'
  138      | PRINT . '(' IDstring ')'
  139      | PRINT . '(' CIDint ')'
  140      | PRINT . '(' CIDfloat ')'
  141      | PRINT . '(' CIDbool ')'
  142      | PRINT . '(' CIDstring ')'
  143      | PRINT . '(' ENDL ')'

    '('  shift, and go to state 106


State 50

   65 control: IF . '(' exprlog ')' '?' list else ENDIF

    '('  shift, and go to state 107


State 51

   66 control: FOR . '(' exprfor ')' list ENDFOR

    '('  shift, and go to state 108


State 52

   67 control: WHILE . '(' exprlog ')' list ENDWHILE

    '('  shift, and go to state 109


State 53

   64 function_call: data_id_type . '(' param_list ')'

    '('  shift, and go to state 110


State 54

   53 body: BGIN list . END
   55 list: list . statement

    IDint      shift, and go to state 41
    IDfloat    shift, and go to state 42
    IDstring   shift, and go to state 43
    IDbool     shift, and go to state 44
    CIDint     shift, and go to state 45
    CIDfloat   shift, and go to state 46
    CIDstring  shift, and go to state 47
    CIDbool    shift, and go to state 48
    END        shift, and go to state 111
    PRINT      shift, and go to state 49
    IF         shift, and go to state 50
    FOR        shift, and go to state 51
    WHILE      shift, and go to state 52

    data_id_type   go to state 53
    statement      go to state 112
    function_call  go to state 56
    control        go to state 57
    assgnst        go to state 58
    assgnint       go to state 59
    assgnbl        go to state 60
    assgnfl        go to state 61
    econst         go to state 62
    print          go to state 63


State 55

   54 list: statement .

    $default  reduce using rule 54 (list)


State 56

   62 statement: function_call . ';'

    ';'  shift, and go to state 113


State 57

   60 statement: control .

    $default  reduce using rule 60 (statement)


State 58

   56 statement: assgnst . ';'

    ';'  shift, and go to state 114


State 59

   57 statement: assgnint . ';'

    ';'  shift, and go to state 115


State 60

   59 statement: assgnbl . ';'

    ';'  shift, and go to state 116


State 61

   58 statement: assgnfl . ';'

    ';'  shift, and go to state 117


State 62

   24 data_id_type: econst .

    $default  reduce using rule 24 (data_id_type)


State 63

   61 statement: print . ';'

    ';'  shift, and go to state 118


State 64

    3 declarations: declarations declaration ';' .

    $default  reduce using rule 3 (declarations)


State 65

    1 progr: declarations body test .

    $default  reduce using rule 1 (progr)


State 66

   13 array_decl: TIPi IDint '[' INT . ']'

    ']'  shift, and go to state 119


State 67

   33 param_decl: TIPi . IDint
   34           | TIPi . CIDint

    IDint   shift, and go to state 120
    CIDint  shift, and go to state 121


State 68

   39 param_decl: TIPf . IDfloat
   40           | TIPf . CIDfloat

    IDfloat   shift, and go to state 122
    CIDfloat  shift, and go to state 123


State 69

   35 param_decl: TIPs . IDstring
   36           | TIPs . CIDstring

    IDstring   shift, and go to state 124
    CIDstring  shift, and go to state 125


State 70

   37 param_decl: TIPb . IDbool
   38           | TIPb . CIDbool

    IDbool   shift, and go to state 126
    CIDbool  shift, and go to state 127


State 71

   41 function_decl: TIPi IDint '(' param_list_decl . ')' BEGIN_FUNCTION list END_FUNCTION

    ')'  shift, and go to state 128


State 72

   30 param_list_decl: params_decl .
   32 params_decl: params_decl . ',' param_decl

    ','  shift, and go to state 129

    $default  reduce using rule 30 (param_list_decl)


State 73

   31 params_decl: param_decl .

    $default  reduce using rule 31 (params_decl)


State 74

   90 numberint: IDint .
   93          | IDint . '[' numberint ']'

    '['  shift, and go to state 130

    $default  reduce using rule 90 (numberint)


State 75

   92 numberint: CIDint .

    $default  reduce using rule 92 (numberint)


State 76

   91 numberint: INT .

    $default  reduce using rule 91 (numberint)


State 77

   25 const_decl: TIPi CIDint ASSIGN numberint .

    $default  reduce using rule 25 (const_decl)


State 78

   15 array_decl: TIPf IDfloat '[' INT . ']'

    ']'  shift, and go to state 131


State 79

   43 function_decl: TIPf IDfloat '(' param_list_decl . ')' BEGIN_FUNCTION list END_FUNCTION

    ')'  shift, and go to state 132


State 80

   94 numberfl: IDfloat .
   97         | IDfloat . '[' numberint ']'

    '['  shift, and go to state 133

    $default  reduce using rule 94 (numberfl)


State 81

   96 numberfl: CIDfloat .

    $default  reduce using rule 96 (numberfl)


State 82

   95 numberfl: FLOAT .

    $default  reduce using rule 95 (numberfl)


State 83

   28 const_decl: TIPf CIDfloat ASSIGN numberfl .

    $default  reduce using rule 28 (const_decl)


State 84

   14 array_decl: TIPs IDstring '[' INT . ']'

    ']'  shift, and go to state 134


State 85

   42 function_decl: TIPs IDstring '(' param_list_decl . ')' BEGIN_FUNCTION list END_FUNCTION

    ')'  shift, and go to state 135


State 86

  104 estring: IDstring .
  107        | IDstring . '[' numberint ']'

    '['  shift, and go to state 136

    $default  reduce using rule 104 (estring)


State 87

  106 estring: CIDstring .

    $default  reduce using rule 106 (estring)


State 88

  105 estring: STRING .

    $default  reduce using rule 105 (estring)


State 89

   26 const_decl: TIPs CIDstring ASSIGN estring .
